.tekton/python-tracer-prepuller.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: python-tracer-prepuller
spec:
  selector:
    matchLabels:
      name: python-tracer-prepuller
  template:
    metadata:
      labels:
        name: python-tracer-prepuller
    spec:
      # Configure an init container for each image you want to pull
      containers:
        - name: pause
          image: gcr.io/google_containers/pause:3.2
          resources:
            limits:
              cpu: 1m
              memory: 8Mi
            requests:
              cpu: 1m
              memory: 8Mi
