.tekton/github-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webhook-ingress
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
  - hosts:
    - <ENTER_YOUR_DOMAIN_NAME_HERE>
  rules:
    - host: <ENTER_YOUR_DOMAIN_NAME_HERE>
      http:
        paths:
          - path: /hooks
            pathType: Exact
            backend:
              service:
                name: el-github-pr-eventlistener
                port:
                  number: 8080
